# QuestRetroDepth

./: .gitignore  CHANGELOG.md  README.md  build.bat  settings.gradle  sidequest.md
.tmp_adb/: genesis_global.ini  quick_settings_presets.ini  snes_global.ini
apk/: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  button_map.h  emulator_backend.cpp  emulator_backend.h  experimental_rumble.cpp  experimental_rumble.h  fceux_backend.cpp  fceux_backend.h  fceux_layer_capture.cpp  fceux_layer_capture.h  game_config.cpp  game_config.h  gles_renderer.cpp  gles_renderer.h  layer_processor.cpp  layer_processor.h  mat4.h  mgba_backend.cpp  mgba_backend.h  mgba_color_stub.c  mgba_layer_capture.cpp  mgba_layer_capture.h  openxr_shell.cpp  openxr_shell.h  panel_layout.cpp  panel_layout.h  pce_backend.cpp  pce_backend.h  pce_layer_capture.cpp  pce_layer_capture.h  picodrive_backend.cpp  picodrive_backend.h  picodrive_sms_layer_capture.cpp  picodrive_sms_layer_capture.h  presentation_shared.h  questretrodepth_main.cpp  rom_browser.cpp  rom_browser.h  settings_io.h  snes9x_layer_capture.cpp  (+11 more)
controller/: README.md  controller_mappings.md  rumble_and_safety.md  standard_gamepad_support_plan.md
homebrew/: all_homebrew.json  featured_homebrew.json  ghb_curated.json  homebrew_feeds.example.json
rumble/: README.md  upgrade_effects.py
rumble/action_replay_mk_iii/: README.md
rumble/bobwin/nes/: Adventures of Lolo 3 (USA).cht  Batman - The Video Game (USA).cht  Battletoads (USA).cht  Battletoads-Double Dragon (USA).cht  Bionic Commando (USA).cht  Castlevania (USA).cht  Contra (USA).cht  Duck Hunt (World).cht  Gradius (USA).cht  Jackal (USA).cht  Mario Bros. Classic (Europe).cht  Mega Man 3 (USA).cht  Mega Man 5 (USA)(S).cht  Metal Storm (USA).cht  Mike Tyson's Punch-Out!! (Japan, USA).cht  Splatterhouse - Wanpaku Graffiti (Japan) (Translated En).cht  Super C (USA).cht  Super Mario Bros. (World).cht  Super Mario Bros. 2 (USA).cht  Teenage Mutant Ninja Turtles (USA).cht  Teenage Mutant Ninja Turtles II - The Arcade Game (USA).cht
rumble/bobwin/pce/: Aero Blasters (USA).cht  Blazing Lazers (USA).cht  Bomberman '93 (USA).cht  Bonk III - Bonk's Big Adventure (USA).cht  Bonk's Adventure (USA).cht  Bonk's Revenge (USA).cht  Gate of Thunder.cht  Lords of Thunder.cht  Magical Chase (USA).cht  Neutopia (USA).cht  R-Type Complete CD.cht  Super Star Soldier (USA).cht
rumble/community_csv/: _template_genesis.csv  _template_snes.csv
rumble/community_csv/genesis/: 3ninjaskickback_genesis.csv  aaahhrealmonsters_genesis.csv  addamsfamily_genesis.csv  advancedbusterhawkgleylancer_genesis.csv  adventuresofbatmanandrobin_genesis.csv  adventuresofmightymax_genesis.csv  adventuresofrockyandbullwinkleandfriends_genesis.csv  aerotheacrobat2_genesis.csv  afterburnerii_genesis.csv  airbuster_genesis.csv  airdiver_genesis.csv  airstriker_genesis.csv  aliensoldier_genesis.csv  alteredbeast_genesis.csv  americangladiators_genesis.csv  archrivalsthearcadegame_genesis.csv  arielthelittlemermaid_genesis.csv  arrowflash_genesis.csv  artoffighting_genesis.csv  asterixandthegreatrescue_genesis.csv  asterixandthepowerofthegods_genesis.csv  atomicrobokid_genesis.csv  atomicrunner_genesis.csv  awesomepossumkicksdrmachinosbutt_genesis.csv  backtothefuturepartiii_genesis.csv  barkleyshutupandjam2_genesis.csv  barkleyshutupandjam_genesis.csv  barneyshideandseekgame_genesis.csv  batman_genesis.csv  batmanreturns_genesis.csv  battlesquadron_genesis.csv  battletechagameofarmoredcombat_genesis.csv  battletoads_genesis.csv  battletoadsdoubledragon_genesis.csv  beautyandthebeastbellesquest_genesis.csv  beautyandthebeastroarofthebeast_genesis.csv  biminirun_genesis.csv  biohazardbattle_genesis.csv  bishoujosenshisailormoon_genesis.csv  bladesofvengeance_genesis.csv  (+299 more)
rumble/community_csv/snes/: 3ninjaskickback_snes.csv  7thsaga_snes.csv  aaahhrealmonsters_snes.csv  accelebrid_snes.csv  actionpachio_snes.csv  actraiser2_snes.csv  actraiser_snes.csv  addamsfamily_snes.csv  addamsfamilypugsleysscavengerhunt_snes.csv  adventuresofbatmanandrobinthe_snes.csv  adventuresofdrfranken_snes.csv  adventuresofkidkleets_snes.csv  adventuresofmightymax_snes.csv  adventuresofrockyandbullwinkleandfriends_snes.csv  adventuresofyogibear_snes.csv  aerofighters_snes.csv  aerotheacrobat2_snes.csv  aerotheacrobat_snes.csv  aircavalry_snes.csv  aladdin_snes.csv  alcahest_snes.csv  alfredchicken_snes.csv  alieniii_snes.csv  alienvspredator_snes.csv  anamericantailfievelgoeswest_snes.csv  archermacleanssuperdropzone_snes.csv  ardylightfoot_snes.csv  artoffighting_snes.csv  asterix_snes.csv  axelay_snes.csv  ballz3d_snes.csv  batmanforever_snes.csv  batmanreturns_snes.csv  battleblaze_snes.csv  battlemasterkyuukyokunosenshitachi_snes.csv  battletoadsanddoubledragon_snes.csv  (+319 more)
rumble/merged_inventory/: index.json  summary.csv
rumble/openai_retro/: _summary.csv
rumble/snes/: _summary.csv  actraiser_2.json  actraiser_2_esp.json  actraiser_j_esp_ips.json  adventures_of_batman_robin_the_usa.json  aladdin_spain.json  alien_3_esp.json  arkanoid_doh_it_again_usa.json  art_of_fighting_usa.json  axelay_usa.json  batman_returns_usa.json  blacktorne_esp.json  breath_of_fire_s.json  captain_america_and_the_avengers_u_esp_ips.json  captain_commando_esp.json  castlevania_dracula_x_usa.json  chrono_trigger_usa_1_01_s.json  contra_iii_the_alien_wars_usa.json  cool_spot_usa.json  cybernator_s.json  darius_twin_usa.json  death_and_return_of_superman_the_usa.json  demon_s_crest_esp.json  do_re_mi_fantasy_la_busqueda_de_milon_s.json  donkey_kong_contry_esp.json  donkey_kong_country_2_diddy_s_kong_quest_usa_en_fr.json  donkey_kong_country_3_dixie_kong_s_double_trouble_usa_en_fr.json  dragon_the_bruce_lee_story_usa.json  earthbound_s.json  earthworm_jim_2_usa.json  earthworm_jim_usa.json  f_zero_usa.json  fatal_fury_2_usa.json  ff3.json  final_fantasy_iv_s.json  final_fantasy_vi_s.json  final_fight_1_esp.json  final_fight_3_esp.json  flashback_s.json  goof_troop_usa.json  (+79 more)
rumble/stable_retro/: .pre-commit-config.yaml  CHANGES.md
(+11639 files in other folders)
